--- a/ex022/fundo006.html
+++ b/ex022/fundo006.html
@@ -3,23 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
+            /*
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /*
+            shorthand - background
+            color > image > position > repeat > [size] > attachment
+
+            */
+            background: black url(imagens/wallpaper002.jpg) center no-repeat fixed;
+            background-size: cover;
+
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
+
         }
     </style>
 </head>
@@ -29,6 +42,12 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus aliquam natus, id minus exercitationem animi nobis reprehenderit nesciunt ducimus accusamus minima ex quaerat dolorum tenetur, quae, debitis quos maxime est?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, aperiam repellat optio molestiae modi, voluptatem dignissimos minima ullam porro iure quasi mollitia aspernatur atque illo doloremque, eum laborum. Consequatur, ipsum.</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut, dolorem totam iusto porro dolor soluta asperiores, quia error aperiam corporis debitis adipisci accusamus ut perferendis quo, saepe vel eligendi blanditiis!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nisi nobis quae reiciendis sapiente magni quisquam, nostrum ipsa saepe animi. Commodi enim beatae nulla reiciendis, ut explicabo laboriosam molestiae facilis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, perspiciatis dicta recusandae, eligendi quaerat natus commodi possimus molestiae voluptatum inventore nostrum esse ab illum debitis qui libero cum sapiente explicabo.
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis aut velit laudantium numquam ad tenetur animi. Delectus possimus, aspernatur illum, consectetur ad odit magni neque debitis eius, amet impedit soluta?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt labore alias eos. Aliquid ipsa tempora ex ipsum ad vel ratione nam molestias maxime laboriosam at, ea amet non nesciunt est.  </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis consequuntur quasi inventore non dolorum, minima quidem ipsum rerum iusto delectus exercitationem iste, aut ut sapiente voluptatibus quas aliquid laborum tenetur?</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident eius accusamus delectus cupiditate mollitia quia cum ut sequi. Fuga doloribus deserunt fugiat quas. Debitis iste architecto molestiae commodi quibusdam quisquam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ratione quis labore cum odio nulla distinctio quae consectetur expedita earum cumque eaque amet, ipsum natus, rerum error nobis deleniti debitis!</p>
 </main>
 </body>
 </html>
