criei um novo site

--- a/desafios/desafioCordel/index.html
+++ b/desafios/desafioCordel/index.html
@@ -99,7 +99,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="">Endrew Oliveira</a></p>
+        <p>Site criado por <a href="https://github.com/SrNoway" target="_blank">Endrew Oliveira</a></p>
     </footer>
 </body>
 </html>
